<resources>
    <string name="app_name">Kisan Seva</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logo_of_the_app">Logo Of The APP</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_4_digit_pin">4-Digit PIN</string>
    <string name="confirm_4_digit_pin">Confirm 4-Digit PIN</string>
    <string name="user_full_name">User Full Name</string>
    <string name="register">REGISTER</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Language Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logout">Logout</string>
    <string name="new_user_register">New User? Register</string>
    <string name="custom_popup">Registration Successful!</string>
    <string name="custom_retry">Registration Failed</string>
    <string-array name="languages">
        <item>English</item>
        <item>हिंदी</item>
    </string-array>
    <string name="default_date_format">dd/MM/yyyy</string>
    <string name="date_format_key">date_format_key</string>
    <string name="date_format">Date Format</string>
    <string name="add_land_details">Add Land details</string>
    <string name="landname">Land Name</string>
    <string name="save_land_details">Save Land details</string>
    <string name="crop_area">Crop area</string>
    <string name="add_field">Add any Field</string>
    <string-array name="land_sizes">
        <item>Acres</item>
        <item>Square Feet</item>
    </string-array>
    <string-array name="crops_grown">
        <item>Wheat</item>
        <item>Corn</item>
        <item>Rice</item>
        <item>Millet</item>
        <item>Legume</item>
        <item>Sugarcane</item>
        <item>Coconut</item>
        <item>Mangoes</item>
        <item>Tobacco</item>
        <item>Pulses</item>
        <item>Cotton</item>
        <item>Jowar</item>
        <item>Jute</item>
        <item>Chillies</item>
        <item>Garlic</item>
        <item>Cauliflowers</item>
        <item>Green peas</item>
        <item>Potatoes</item>
        <item>Tomatoes</item>
        <item>Onions</item>
    </string-array>
    <string-array name="soil_type">
        <item>Alluvial soil</item>
        <item>Red soil</item>
        <item>Black soil</item>
        <item>Laterite soil</item>
    </string-array>
    <string name="investment">Investment</string>
    <string name="initial_capital">Initial Capital</string>
    <string name="advertisements">Advertisements</string>
    <string name="statistics">Statistics</string>
    <string name="today">Today</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="finance_tracker">Finance Tracker</string>
    <string name="expenses">Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="select_date">Select date</string>
    <string name="choose_land">choose land</string>
    <string name="amount_spent">Amount spent</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub category</string>
    <string name="description">Description</string>
    <string name="save_expense">Save expense</string>
    <string name="income">Income</string>
    <string name="electricity">Electricity</string>
    <string name="labour">labour</string>
    <string name="machinery_and_fuel">Machinery and fuel</string>
    <string name="infrastructure">Infrastructure</string>
    <string-array name="chemicals_used">
        <item>Pesticides</item>
        <item>Herbicides</item>
        <item>Insecticides</item>
        <item>Fungicides</item>
    </string-array>
    <string-array name="seeds_used">
        <item>peas</item>
        <item>green gram</item>
        <item>chillies</item>
        <item>pulses</item>
        <item>legumes</item>
        <item>wheat</item>
        <item>rice</item>
        <item>maize</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_mixed_cropping">MixedCropping</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lang1">English</string>
    <string name="lang2">हिंदी</string>
    <string name="lang3">తెలుగు</string>
    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you to make entiries of your expense</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>
    <string name="daily_expenses">Daily Expenses</string>
    <string name="loan_tracker">Loan Tracker</string>
    <string name="lands">Lands</string>
    <string name="advices">advices</string>
    <string name="retailing">Retailing</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="government_policies">Government Policies</string>
    <string-array name="mixed_cropping">
        <item>Wheat</item>
        <item>Durum Wheat</item>
        <item>Barley</item>
        <item>Oat</item>
        <item>Rye and mustard</item>
        <item>Yellow mustard</item>
        <item>Linseed</item>
        <item>Kusum</item>
        <item>Rabi Maize</item>
        <item>Baby Corn</item>
        <item>Gram</item>
        <item>Peas</item>
        <item>Lentil</item>
        <item>Rabbi Beans</item>
        <item>Barseem</item>
    </string-array>
    <string name="assistance">Assistance</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="loginheadertext">Login</string>
    <string name="registerationheadertext">Registeration</string>
    <string name="statistics_graphs">Statistics</string>
    <string name="market_selling">Market Selling</string>
    <string name="bank_loan">Bank Loan</string>
    <string name="money_lender">Money Lender</string>
    <string name="wheat">Wheat</string>
    <string name="durum_wheat">Durum Wheat</string>
    <string name="barley">Barley</string>
    <string name="oat">Oat</string>
    <string name="rye_mustard">Rye and mustard</string>
    <string name="yellow_mustard">Yellow mustard</string>
    <string name="linseed">Linseed</string>
    <string name="kusum">Kusum</string>
    <string name="rabi_maize">Rabi Maize</string>
    <string name="baby_corn">Baby Corn</string>
    <string name="gram">Gram</string>
    <string name="peas">Peas</string>
    <string name="lentil">Lentil</string>
    <string name="rabbi_beans">Rabbi Beans</string>
    <string name="barseem">Barseem</string>
    <string name="mcwheat">Mixed Cropping-Wheat</string>
    <string name="mcdurum_wheat">Mixed Cropping-Durum Wheat</string>
    <string name="mcbarley">Mixed Cropping-Barley</string>
    <string name="mcoat">Mixed Cropping-Oat</string>
    <string name="mcrye_mustard">Mixed Cropping-Rye and mustard</string>
    <string name="mcyellow_mustard">Mixed Cropping-Yellow mustard</string>
    <string name="mclinseed">Mixed Cropping-Linseed</string>
    <string name="mckusum">Mixed Cropping-Kusum</string>
    <string name="mcrabi_maize">Mixed Cropping-Rabi Maize</string>
    <string name="mcbaby_corn">Mixed Cropping-Baby Corn</string>
    <string name="mcgram">Mixed Cropping-Gram</string>
    <string name="mcpeas">Mixed Cropping-Peas</string>
    <string name="mclentil">Mixed Cropping-Lentil</string>
    <string name="mcrabbi_beans">Mixed Cropping-Rabbi Beans</string>
    <string name="mcbarseem">Mixed Cropping-Barseem</string>
    <string-array name="loan_type">
        <item>Bank loan</item>
        <item>Money Lender</item>
    </string-array>
    <string-array name="tenure">
        <item>3</item>
        <item>6</item>
        <item>8</item>
        <item>12</item>
    </string-array>
    <string name="record_income">Record Income</string>
    <string name="reminder">Reminder</string>
    <string name="retry_text">Retry</string>
    <string name="match_pin_error">PIN and Confirm PIN does not match</string>
    <string name="_4_digit_pin_error">PIN should be 4 digits</string>
    <string name="user_fullname_error">User full name should be at least 3 characters long</string>
    <string name="email_error">Invalid Email!</string>
    <string name="mobile_number_error">Mobile number should be 10 digits!</string>
    <string name="kisan_seva_expenses">Kisan Seva-Expenses</string>
    <string name="kisan_seva_income">Kisan Seva-Income</string>
    <string name="kisan_seva_loans">Kisan Seva-Loans</string>
    <string name="kisan_seva_lands">Kisan Seva-Lands</string>
    <string name="kisan_seva_advices">Kisan Seva-Advices</string>
    <string name="kisan_seva_retailing">Kisan Seva-Retailing</string>
</resources>