<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"

    tools:context=".basic.RegistrationActivity">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/registerationheadertext"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:scrollbars="none">
        <!-- LinearLayout Inside ScrollView -->
        <!-- LinearLayout Inside ScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- create a Linear Layout with horizontal orientation and weightSum property -->


            <ImageView
                android:id="@+id/logo3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/applogo"

                android:contentDescription="@string/logo_of_the_app"

                android:cropToPadding="true"
                android:scaleType="fitCenter" />

            <EditText
                android:id="@+id/userfullname"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/browser_actions_bg_grey"
                android:ems="10"
                android:hint="@string/user_full_name"
                android:inputType="textPersonName"
                android:minHeight="80px"
                android:padding="4dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/browser_actions_bg_grey"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#333333"
                android:minHeight="80px"
                android:padding="4dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/browser_actions_bg_grey"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:minHeight="80px"
                android:textColor="#333333"
                android:padding="4dp" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/browser_actions_bg_grey"
                android:ems="10"
                android:hint="@string/_4_digit_pin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:minHeight="80px"
                android:padding="4dp"
                android:textColor="#333333" />

            <EditText
                android:id="@+id/confirmpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/browser_actions_bg_grey"
                android:ems="10"
                android:hint="@string/confirm_4_digit_pin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:minHeight="80px"
                android:padding="4dp"
                android:textColor="#333333" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="false"
                android:text="@string/already_registered"
                android:textColor="#333333"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>