<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llReminder"
        style="@style/settings_item_layout">

        <TextView
            android:id="@+id/tv_reminder_header"
            style="@style/settings_header"
            android:text="@string/sett_reminder_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_reminder_label"
                style="@style/settings_sub_header"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:text="@string/sett_reminder_label" />

            <ToggleButton
                android:id="@+id/timerSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="right|center_horizontal|center"
                android:text="ToggleButton" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_reminder_desc"
            style="@style/settings_details"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:paddingTop="@dimen/items_top_padding"
            android:text="@string/sett_reminder_desc" />

        <LinearLayout
            android:id="@+id/ll_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_reminder_time_label"
                    style="@style/settings_sub_header"
                    android:text="@string/sett_reminder_time_label" />

                <ImageView
                    android:id="@+id/iv_timer"
                    android:layout_width="@dimen/timer_icon"
                    android:layout_height="@dimen/timer_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_timer" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_reminder_time_desc"
                style="@style/settings_details"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:paddingTop="@dimen/items_top_padding"
                android:text="@string/sett_reminder_time_content" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/textColorSecondary" />

</LinearLayout>
